testdata/compiler/invalid/inheritance-cycle.pt
req a(b):
	GET /a

req b(a):
	GET /b

flow "cycle":
	a
